--- a/ask/qa/templates/qa/index.html
+++ b/ask/qa/templates/qa/index.html
@@ -8,7 +8,7 @@
     <h2>List Quest:</h2>
     <ul>
     {% for quest in quest_list %}
-        <li>{{ quest.title }}</li>
+        <li>{{ quest.id }} - {{ quest.title }}</li>
         <p><a href="/question/{{ quest.id }}">К вопросу</a></p>
     {% endfor %}
     </ul>
